<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/repoImg"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_margin="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@id/repoName"/>

    <TextView
        android:id="@+id/repoName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:text="@string/reponame"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/repoImg"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/repoImg" />
    <TextView
        android:id="@+id/repoOwner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="3dp"
        android:text="@string/reponame"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/repoImg"
        app:layout_constraintLeft_toLeftOf="@id/repoName"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/repoName" />

    <TextView
        android:id="@+id/repoDesc"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="8dp"
        android:text="@string/repo_description"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:maxLines="2"
        android:ellipsize="end"
        app:layout_constraintLeft_toLeftOf="@id/repoImg"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/repoImg" />

    <androidx.cardview.widget.CardView
        android:id="@+id/languageColor"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_marginLeft="10dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="@id/language"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/language"
        app:layout_constraintTop_toTopOf="@id/language">

        <TextView
            android:id="@+id/languageColorTxt"
            android:layout_width="match_parent"
            android:background="@color/black"
            android:layout_height="match_parent" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/language"
        android:textStyle="bold"
        android:textSize="12sp"
        android:layout_marginHorizontal="5dp"
        android:paddingHorizontal="5dp"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/languageColor"
        app:layout_constraintTop_toBottomOf="@id/repoDesc" />

    <TextView
        android:id="@+id/starred"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="3dp"
        android:textSize="12sp"
        android:textStyle="bold"
        android:layout_marginRight="10dp"
        android:gravity="center_vertical"
        android:text="@string/starred"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/repoDesc"
        app:drawableLeftCompat="@drawable/ic_star" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/language"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>